--- a/src/WhereGroup/ThemeBundle/Resources/sass/theme/sections/_home.scss
+++ b/src/WhereGroup/ThemeBundle/Resources/sass/theme/sections/_home.scss
@@ -91,6 +91,7 @@ $home-menu-height: 35px;
 
 .md .source {
     display: block;
+    z-index: 2;
 
     & > .source-list {
         margin: 0;
